# Hearthstone-Image-Recognition

./: README.md  config.xml  data.xml
calibrations/: trumpsc.xml
src/: .project  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Config.h  Database.cpp  Database.h  Logger.h  PerceptualHash.cpp  PerceptualHash.h  Recognizer.cpp  Recognizer.h  Stream.cpp  Stream.h  StreamManager.cpp  StreamManager.h  SystemInterface.h  legacy_codedump.txt  main.cpp
src/Calibration/: Calibration.cpp  Calibration.h  Calibrator.cpp  Calibrator.h  main.cpp
src/bot/: bot.cpp  bot.h  connection.cpp  connection.h  logger.cpp  logger.h  mainbot.cpp
src/tests/: testRecognizer.cpp
src/types/: Calibration.cpp  Calibration.h  Deck.cpp  Deck.h  Stream.cpp  Stream.h
